feat(Tests): extra commands to run unit tests TDD style as well as e2e in interactive mode. Also improved README.

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Angular 2 App</title>
+    <title>Angular 2 App | ng2-webpack</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <base href="./">
