--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Angular 2 App | ng2-webpack</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
 
     <base href="./">
   </head>
