--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8">
     <title>Angular 2 App | ng2-webpack</title>
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+    <!-- other link tags are injected at build time by webpack -->
 
     <base href="./">
   </head>
   <body>
     <app>Loading...</app>
+    <!-- script tags are injected at build time by webpack -->
   </body>
 </html>
