chore: use angular2-polyfill directly on script tag

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -9,5 +9,8 @@
   </head>
   <body>
     <app>Loading...</app>
+    
+  <!-- Angular 2 requires this file to be loaded before anything else -->
+  <script src="polyfills/angular2-polyfills.js"></script>
   </body>
 </html>
