--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Angular 2 App | ng2-webpack</title>
-    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
 
     <base href="./">
   </head>
   <body>
     <app>Loading...</app>
-    
+
   <!-- Angular 2 requires this file to be loaded before anything else -->
   <script src="polyfills/angular2-polyfills.js"></script>
   </body>
