--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Angular 2 App | ng2-webpack</title>
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+    <link rel="manifest" href="/manifest.json">
 
     <base href="/">
   </head>
